# pulsear

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO  sql_create
pulsear/: Cargo.toml
pulsear-cli/: Cargo.toml
pulsear-ui/: Cargo.toml  tauri.conf.json
pulsear-ui/src/: command.rs  main.rs
pulsear-ui/ui/: auth.js  base.js  body.html  icon.css  index.html  script.js  style.css  styles.css  uploader.js  worker.js  ws.js
pulsear/src/: api.rs  auth.rs  command.rs  file.rs  lib.rs  main.rs  server.rs  sql.rs  util.rs  websocket.rs
