[package]
name = "pulsear-ui"
version = "0.1.0"
edition = "2021"
authors = ["Lemonorn <mmagicode@gmail.com>"]
description = """
A tauri frontend app for a NAS system
"""
license = "MIT"
readme = "../README.md"
repository = "https://github.com/linepi/pulsear"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [] }
pulsear = { path = "../pulsear" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
