[package]
name = "pulsear"
version = "0.1.0"
edition = "2021"
authors = ["Lemonorn <mmagicode@gmail.com>"]
description = """
A rust server of a NAS system
"""
license = "MIT"
readme = "../README.md"
repository = "https://github.com/linepi/pulsear"

[dependencies]
rand = "0.8.5"
actix-web = { version = "4", features = ["openssl"] }
actix-web-actors = "4.0.0"
actix = "0.13"
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
mysql = "25.0.0"
chrono = "0.4.0"
sha256 = "1.0.3"
bytes = "1.7.0"
